[FIXED] Distortions with css and Sway towards the left.
Fixed the following:

> Top Banner swaying toward the left
> Logo on side banner out of scale
> Directions box on posting.php awkwardly spaced
> Types of transportation on posting.php is gone LOCO

--- a/Code/CSS/home.css
+++ b/Code/CSS/home.css
@@ -27,13 +27,8 @@
 hr {
   border: 1px solid #09677e; }
 
-#lang_select {
-  margin-top: 8px;
-  margin-right: -8px; }
-
 #uacnt {
-  margin-top: 15px;
-  margin-right: 14px; }
+  margin-top: 11px; }
 
 #home_ {
   margin-top: 8%;
